--- a/src/index.css
+++ b/src/index.css
@@ -34,11 +34,11 @@ body,
 
 a {
   font-weight: 500;
-  color: #9fa2dc;
+  color: var(--color-blue-300);
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: var(--color-blue-400);
 }
 
 body {
@@ -66,7 +66,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #8386c5;
 }
 button:focus,
 button:focus-visible {
@@ -75,11 +75,11 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #81a5c4;
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #6e71a7;
   }
   button {
     background-color: #f9f9f9;
