--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  /* color-scheme: light dark; */
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
@@ -73,15 +73,3 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #81a5c4;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #6e71a7;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
