--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,42 +1,109 @@
 @layer base {
-    @font-face {
-      font-family: 'Inter';
-      font-style: normal;
-      font-weight: 400;
-      font-display: swap;
-      src: url('/fonts/inter/Inter-Regular.woff2') format('woff2');
-    }
-    
-    @font-face {
-      font-family: 'Inter';
-      font-style: normal;
-      font-weight: 500;
-      font-display: swap;
-      src: url('/fonts/inter/Inter-Medium.woff2') format('woff2');
-    }
-    
-    @font-face {
-      font-family: 'Inter';
-      font-style: normal;
-      font-weight: 700;
-      font-display: swap;
-      src: url('/fonts/inter/Inter-Bold.woff2') format('woff2');
-    }
-    
-    @font-face {
-      font-family: 'Merriweather';
-      font-style: normal;
-      font-weight: 400;
-      font-display: swap;
-      src: url('/fonts/merriweather/Merriweather-Regular.woff2') format('woff2');
-    }
-    
-    @font-face {
-      font-family: 'Merriweather';
-      font-style: normal;
-      font-weight: 700;
-      font-display: swap;
-      src: url('/fonts/merriweather/Merriweather-Bold.woff2') format('woff2');
-    }
+  /* Inter - Thin (200) */
+  @font-face {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 200;
+    font-display: swap;
+    src: url('/fonts/inter/Inter-ExtraLight.woff2') format('woff2');
   }
   
+  /* Inter - Light (300) */
+  @font-face {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url('/fonts/inter/Inter-Light.woff2') format('woff2');
+  }
+  
+  /* Inter - Regular (400) */
+  @font-face {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url('/fonts/inter/Inter-Regular.woff2') format('woff2');
+  }
+  
+  /* Inter - Regular Italic */
+  @font-face {
+    font-family: 'Inter';
+    font-style: italic;
+    font-weight: 400;
+    font-display: swap;
+    src: url('/fonts/inter/Inter-Italic.woff2') format('woff2');
+  }
+  
+  /* Inter - Medium (500) */
+  @font-face {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url('/fonts/inter/Inter-Medium.woff2') format('woff2');
+  }
+  
+  /* Inter - Medium Italic */
+  @font-face {
+    font-family: 'Inter';
+    font-style: italic;
+    font-weight: 500;
+    font-display: swap;
+    src: url('/fonts/inter/Inter-MediumItalic.woff2') format('woff2');
+  }
+  
+  /* Inter - Bold (700) */
+  @font-face {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url('/fonts/inter/Inter-Bold.woff2') format('woff2');
+  }
+  
+  /* Inter - Bold Italic */
+  @font-face {
+    font-family: 'Inter';
+    font-style: italic;
+    font-weight: 700;
+    font-display: swap;
+    src: url('/fonts/inter/Inter-BoldItalic.woff2') format('woff2');
+  }
+  
+  /* Merriweather - Regular (400) */
+  @font-face {
+    font-family: 'Merriweather';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url('/fonts/merriweather/Merriweather-Regular.woff2') format('woff2');
+  }
+  
+  /* Merriweather - Regular Italic */
+  @font-face {
+    font-family: 'Merriweather';
+    font-style: italic;
+    font-weight: 400;
+    font-display: swap;
+    src: url('/fonts/merriweather/Merriweather-Italic.woff2') format('woff2');
+  }
+  
+  /* Merriweather - Bold (700) */
+  @font-face {
+    font-family: 'Merriweather';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url('/fonts/merriweather/Merriweather-Bold.woff2') format('woff2');
+  }
+  
+  /* Merriweather - Bold Italic */
+  @font-face {
+    font-family: 'Merriweather';
+    font-style: italic;
+    font-weight: 700;
+    font-display: swap;
+    src: url('/fonts/merriweather/Merriweather-BoldItalic.woff2') format('woff2');
+  }
+}
