env fixes, and eliminate hard coded names

--- a/src/index.css
+++ b/src/index.css
@@ -68,12 +68,12 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #242323;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #8386c5;
+  border-color: #5e5f72;
 }
 button:focus,
 button:focus-visible {
